fix swagger response
